tests/snapshots/snapshots__interpreter@cancel_finalizer.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/cancel_finalizer.pr
---
worker: before yield
finalizer ran
scene done
0
=> ()
