tests/snapshots/snapshots__interpreter@cancel_grandchild.pr.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/run/cancel_grandchild.pr
---
child: running
grandchild: running
grandchild finalizer ran
child finalizer ran
scene done
0
=> ()
