tests/snapshots/snapshots__interpreter@cancel_idempotent.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/cancel_idempotent.pr
---
worker: before yield
finalizer ran
scene done
0
=> ()
