tests/snapshots/snapshots__interpreter@cancel_sibling_fail.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/cancel_sibling_fail.pr
---
sibling: running
failer: about to fail
sibling finalizer ran
run recovered with -1
=> ()
