tests/snapshots/snapshots__interpreter@class_context.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/class_context.pr
---
-1
1
0
29
31
314
=> ()
