tests/snapshots/snapshots__interpreter@class_effects.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/class_effects.pr
---
40
1
70
=> ()
