tests/snapshots/snapshots__interpreter@class_named.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/class_named.pr
---
-1
1
1
2
3
3
2
1
=> ()
