tests/snapshots/snapshots__interpreter@classes.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/classes.pr
---
int:42
yes
int:7!
no!
=> ()
