tests/snapshots/snapshots__interpreter@combine_effects.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/combine_effects.pr
---
-1
7
15
=> ()
