tests/snapshots/snapshots__interpreter@comp_guard_dispatch.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/comp_guard_dispatch.pr
---
3
1
=> ()
